# jieqi-ai-sys

./: .editorconfig  .gitignore  API_MANUAL.md  CHANGELOG.md  CONTRIBUTING.md  JIEQI_AI_SYSTEM_DOCUMENTATION.md  LICENSE.md  README.md  requirements.txt  setup.py
android_client/: README.md  build.gradle  local.properties  settings.gradle
android_client/app/: build.gradle
android_client/app/src/main/: AndroidManifest.xml
android_client/app/src/main/java/com/jieqi/chess/recognition/: AIServiceClient.java  BoardProcessor.java  JieQiApp.java  MainActivity.java
android_client/app/src/main/res/layout/: activity_main.xml
android_client/app/src/main/res/values/: strings.xml  styles.xml
android_client/app/src/main/res/xml/: accessibility_service_config.xml
cpp/: CMakeLists.txt  README.md
cpp/config/: default.conf
docs/: STRUCTURE.md
scripts/: build_cpp.sh  run_tests.sh
server/: README.md  __init__.py  app.py  start_server.py  test_ai_integration.py  test_client.py
src/: __init__.py
src/ai/: __init__.py  engine.py
src/board/: __init__.py
src/gui/: __init__.py  main.py
src/utils/: __init__.py
